# itlab_2023

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  alexnet.cpp  reader_img.cpp
app/Accuracy/: CMakeLists.txt  acc.cpp  accuracy_check.cpp
app/AccuracyImgNet/: CMakeLists.txt  accimgnet.cpp
app/AlexNet/: CMakeLists.txt  parser.py  reader_weights_sample.cpp
app/Graph/: CMakeLists.txt  acc_check_mnist.cpp  build.cpp  build.hpp  graph_build.cpp
app/ReaderImage/: CMakeLists.txt  reader_img_s.cpp
app/accuracy_app/: accuracy_check.cpp
include/: CMakeLists.txt
include/Weights_Reader/: reader_weights.hpp
include/alexnet/: CMakeLists.txt  alexnet.hpp  reader_tf_model.hpp
include/graph/: graph.hpp
include/layers/: BinaryOpLayer.hpp  ConvLayer.hpp  EWLayer.hpp  FCLayer.hpp  FlattenLayer.hpp  InputLayer.hpp  Layer.hpp  MulLayer.hpp  OutputLayer.hpp  PoolingLayer.hpp  Shape.hpp  Tensor.hpp
include/read/: CMakeLists.txt  reader_img.hpp
src/: CMakeLists.txt
src/Weights_Reader/: CMakeLists.txt  reader_weights.cpp
src/alexnet/: alexnet_src.cpp  reader_tf_model.cpp
src/graph/: CMakeLists.txt
src/layers/: BinaryOpLayer.cpp  CMakeLists.txt  ConvLayer.cpp  DropOutLayer.cpp  FCLayer.cpp  FlattenLayer.cpp  Layer.cpp  MulLayer.cpp  OutputLayer.cpp  PoolingLayer.cpp  Shape.cpp  Tensor.cpp
src/perf/: CMakeLists.txt
src/read/: reader_img.cpp
test/: CMakeLists.txt
test/benchmarking/: test_layers_time.cpp
test/inference/: test_inference.cpp
test/model_read/: model_read.cpp
test/model_read/json_for_test/: invalid-[.json  invalid-_.json  invalid-}.json  invalid-}}.json  invalid_number.json  valid.json
test/single_layer/: test_binaryoplayer.cpp  test_convlayer.cpp  test_ewlayer.cpp  test_fclayer.cpp  test_inlayer.cpp  test_mullayer.cpp  test_outputlayer.cpp  test_poolinglayer.cpp
test/test_read/: CMakeLists.txt  test_read.cpp
